fixed bugs with footer alignment and responsive navbar dropdown

--- a/css/themes/inksaver/inksaver.css
+++ b/css/themes/inksaver/inksaver.css
@@ -20333,8 +20333,8 @@ pre {
       @media screen and (max-width: 1200px) {
         .header-a .navbar .container .navbar-ctas, .header-a .navbar .banner-boxed .navbar-ctas {
           width: 295px !important;
-          position: absolute;
-          left: 15px; } }
+          position: absolute !important;
+          left: 15px !important; } }
       .header-a .navbar .container .navbar-ctas #navbar, .header-a .navbar .banner-boxed .navbar-ctas #navbar {
         height: auto !important;
         padding-right: 0px;
@@ -20706,7 +20706,7 @@ ul.footer-list li {
   .footer #site-map-list-2 {
     padding-left: 20px !important; }
   .footer #connect-list {
-    padding-left: 45px !important;
+    padding-left: 20px !important;
     width: 160px !important; } }
 
 @media screen and (max-width: 768px) {
