--- a/scss/themes/inksaver/layout/_footer.scss
+++ b/scss/themes/inksaver/layout/_footer.scss
@@ -129,7 +129,7 @@ ul.footer-list li {
     }
 
     #connect-list {
-      padding-left: 45px !important;
+      padding-left: 20px !important;
       width: 160px !important;
     }
   }
