--- a/scss/themes/inksaver/layout/_navbar.scss
+++ b/scss/themes/inksaver/layout/_navbar.scss
@@ -29,8 +29,8 @@
 
         @media screen and (max-width: 1200px) {
           width: 295px !important;
-          position: absolute;
-          left: 15px;
+          position: absolute !important;
+          left: 15px !important;
         }
 
         #navbar {
